<resources>
  <string name="app_name">java_learn</string>
  <string name="glossary">GLOSSARY</string>
  <string name="definition_one_question">A function defined in a class.</string>
  <string name="definition_two_question">A type that defines the implementation of a particular kind of object.</string>
  <string name="definition_three_question">The principal building blocks of object-oriented programs.</string>
  <string name="fourth_definition_question">A data member of a class.</string>
  <string name="definition_five_question">A Java keyword used in a class definition to specify that a class is to be inherited by other classes.</string>
  <string name="fill_blank_submit">SUBMIT</string>


  <string-array name="definition_one_entries">
    <item>Array Item One</item>
    <item>Array Item Two</item>
    <item>Array Item Three</item>
  </string-array>
  <string-array name="definition_two_entries">
    <item>Array Item One</item>
    <item>Array Item Two</item>
    <item>Array Item Three</item>
  </string-array>
  <string-array name="definition_three_entries">
    <item>Array Item One</item>
    <item>Array Item Two</item>
    <item>Array Item Three</item>
  </string-array>
  <string-array name="definition_four_entries">
    <item>Array Item One</item>
    <item>Array Item Two</item>
    <item>Array Item Three</item>
  </string-array>
  <string-array name="definition_five_entries">
    <item>Array Item One</item>
    <item>Array Item Two</item>
    <item>Array Item Three</item>
  </string-array>

  <string-array name="fill_in_one_entries">
    <item>Select an answer…</item>
    <item>try</item>
    <item>Random</item>
    <item>IOException e</item>
    <item>println</item>
    <item>InterruptedException</item>
    <item>printf</item>
    <item>writer</item>
    <item>do</item>
  </string-array>
  <string-array name="fill_in_two_entries">
    <item>Select an answer…</item>
    <item>try</item>
    <item>Random</item>
    <item>IOException e</item>
    <item>println</item>
    <item>InterruptedException</item>
    <item>printf</item>
    <item>writer</item>
    <item>do</item>
  </string-array>
  <string-array name="fill_in_three_entries">
    <item>Select an answer…</item>
    <item>try</item>
    <item>Random</item>
    <item>IOException e</item>
    <item>println</item>
    <item>InterruptedException</item>
    <item>printf</item>
    <item>writer</item>
    <item>do</item>
  </string-array>
  <string-array name="fill_in_four_entries">
    <item>Select an answer…</item>
    <item>try</item>
    <item>Random</item>
    <item>IOException e</item>
    <item>println</item>
    <item>InterruptedException</item>
    <item>printf</item>
    <item>writer</item>
    <item>do</item>
  </string-array>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="login_button">login</string>
  <string name="client_id">404380885732-s2llm82hf26adu3j4g9ecnm0jdbsbncv.apps.googleusercontent.com</string>
  <string name="google_signin_failure">Unable to Sign In with Google</string>
  <string name="authorization_header_format">Bearer %s</string>
  <string name="base_url">http://10.0.2.2:28082/rest/</string>


</resources>
