<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  >

  <android.support.v7.widget.CardView
    android:id="@+id/definitions_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/cardView"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/submit_definitions"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    >

  <TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TableRow>
      <TextView
        android:id="@+id/first_definition"
        style="@style/TextViewStyle"
        android:layout_width="625dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:singleLine="false"
        android:text="@string/definition_one_question"
        />

      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/definition_one_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:entries="@array/definition_one_entries">
      </android.support.v7.widget.AppCompatSpinner>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_check"
        android:padding="20dp"
        />

    </TableRow>
    <TableRow>
      <TextView
        android:id="@+id/second_definition"
        style="@style/TextViewStyle"
        android:layout_width="625dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/definition_two_question"
        />

      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/definition_second_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:entries="@array/definition_two_entries">
      </android.support.v7.widget.AppCompatSpinner>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_check"
        android:padding="20dp"
        />

    </TableRow>

    <TableRow>
      <TextView
        android:id="@+id/third_definition"
        style="@style/TextViewStyle"
        android:layout_width="625dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/definition_three_question"
        />

      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/definition_third_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:entries="@array/definition_three_entries">
      </android.support.v7.widget.AppCompatSpinner>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_check"
        android:padding="20dp"
        />

    </TableRow>
    <TableRow>
      <TextView
        android:id="@+id/fourth_definition"
        style="@style/TextViewStyle"
        android:layout_width="625dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/fourth_definition_question"
        />

      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/definition_fourth_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:entries="@array/definition_four_entries">
      </android.support.v7.widget.AppCompatSpinner>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_check"
        android:padding="20dp"
        />

    </TableRow>
    <TableRow>
      <TextView
        android:id="@+id/fifth_definition"
        style="@style/TextViewStyle"
        android:layout_width="625dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/definition_five_question"
        />
      <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/definition_fifth_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:entries="@array/definition_five_entries"
        >
      </android.support.v7.widget.AppCompatSpinner>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:src="@drawable/ic_check"
        android:padding="20dp"
        />

    </TableRow>


  </TableLayout>

  </android.support.v7.widget.CardView>

  <Button
    android:id="@+id/submit_definitions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="SUBMIT"
    android:background="@drawable/my_button"
    android:textAlignment="center"
    app:layout_constraintBottom_toBottomOf="@id/definitions_card"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>



